# Repo_wiki

./: .gitignore  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  ROADMAP.md  SAS.md  TEST.md  evaluation_report.md  progress.md  pyproject.toml
docs/: architecture.md  benchmarks.md  examples.md  roadmap.md
docs/adr/: 0001-local-first-storage.md  0002-graph-enhanced-retrieval.md  0003-mcp-in-version-1.md  0004-documentation-first-class.md  0005-thin-stdlib-interfaces-for-version-1.md  0006-versioned-sqlite-and-toml-config.md
docs/api/: http.md  mcp-tools.md
docs/architecture/: mcp.md  retrieval.md  software-architecture-specification.md  system-overview.md
docs/benchmarks/: README.md  blind-holdout-v0.1.md  methodology.md  mvp-results.md  repos.txt  retrieval-quality.md
docs/development/: commits.md  setup.md  testing.md
docs/diagrams/: extraction-pipeline.mmd  ingestion-pipeline.mmd  interface-architecture.mmd  knowledge-graph.mmd  reflexion-pipeline.mmd  retrieval-pipeline.mmd  system-architecture.mmd
docs/examples/: api.md  cli.md  demo.md  mcp.md
docs/release/: v0.1.0.md
docs/usage/: agents.md  mcp-setup.md  quickstart.md
packs/: python-data.toml  python-ml-tools.toml  python-web-apis.toml  rust-cli-tools.toml  typescript-nextjs.toml
repo_wiki/: __init__.py  config.py  logging.py
repo_wiki/benchmarks/: report.py  retrieval_cases.py
repo_wiki/bootstrap/: __init__.py  loader.py
repo_wiki/compile/: dedupe.py  (+3 more)
scripts/: build_benchmark_dataset.py
tests/: test_end_to_end.py  test_retrieval_quality.py
(+62 files in other folders)
